<resources>
    <string name="app_name">Pearly</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Peter Pearing</string>
    <string name="nav_header_subtitle">peter.pearing@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="toolbarIcon_search">Search</string>
    <string name="toolbarIcon_profile">Profile</string>
    <string name="toolbarIcon_settings">Settings</string>

    <string name="fragmentHome_category_createdGames">Created</string>
    <string name="fragmentHome_category_favoriteGames">Favorite</string>
    <string name="fragmentHome_category_top10Games">Top 10</string>
    <string name="fragmentHome_category_classicGames">Classic</string>
    <string name="fragmentHome_category_solitaryGames">Solitary</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_create_game">Create Game</string>
    <string name="menu_join_game">Join game</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_modification_selectAll">Select all</string>
    <string name="fragment_modification_deleteSelected_modification_show">Show:</string>
    <string name="fragment_modification_redCards">Red cards</string>
    <string name="fragment_modification_blueCards">Blue cards</string>
    <string name="fragment_modification_greenCards">Green cards</string>
    <string name="fragment_modification_yellowCards">Yellow cards</string>
    <string name="fragment_modification_wildCards">Wild cards</string>
    <string name="fragment_modification_deleteSelected">Delete selected</string>
    <string name="fragment_modification_applyChanges">Apply changes</string>
    <string name="fragment_modification_options">Options:</string>
    <string name="fragment_modification_editSelected">Edit selected</string>
    <string name="fragment_modification_discard_changes">DISCARD CHANGES</string>

    <string name="detail_about">UNO is the classic card game that’s easy to pick up and impossible to put down! Players take turns matching a card in their hand with the current card shown on top of the deck either by color or number. Special action cards deliver game-changing moments as they help you defeat your opponents. These include Skips, Reverses, Draw Twos, Wild and Draw Four Wild cards. You’ll find 25 of each color (red, green, blue, and yellow), eight Wild cards, three Customizable cards and one Special Rule card inside the 112-card deck. If you can’t make a match, you must draw from the central pile! And when you’re down to one card, don’t forget to shout “UNO!” The first player to rid themselves of all the cards in their hand before their opponents wins. It’s Fast Fun for Everyone! </string>
    <string name="play">Play</string>
    <string name="modify">Modify</string>
    <string name="test">Test</string>
    <string name="setup">Set up the game: UNO</string>
    <string name="volume">Volume</string>
    <string name="number_of_cards">Number of cards</string>
    <string name="number_of_players">Number of players</string>
    <string name="invite">Invite Players</string>
    <string name="invitelist">From friendlist</string>
    <string name="code">With code</string>
    <string name="play_online">Play online</string>
    <string name="more">More</string>
    <string name="inthisgame">In this game</string>
    <string name="me">ME</string>
    <string name="recent">Recently added</string>
    <string name="vader">Darth Vader</string>
    <string name="kermit">Kermit the frog</string>
    <string name="spiderman">Spiderman</string>
    <string name="pr">Princess unicorn</string>


</resources>
