<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search"/>

        <item
            android:id="@+id/nav_join_game"
            android:icon="@drawable/ic_join"
            android:title="@string/menu_join_game" />

        <item
            android:id="@+id/nav_create_game"
            android:icon="@drawable/ic_create"
            android:title="@string/menu_create_game" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/alejandro"
            android:icon="@drawable/ic_settings"
            android:title="ALEJANDRO" />

        <item
            android:id="@+id/timi"
            android:icon="@drawable/ic_settings"
            android:title="TIMI" />

        <item
            android:id="@+id/themis"
            android:icon="@drawable/ic_settings"
            android:title="THEMIS" />

        <item
            android:id="@+id/miriam"
            android:icon="@drawable/ic_settings"
            android:title="MIRIAM" />
    </group>
</menu>
