<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".fragments.TimiFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup"
        android:textColor="@color/textLight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:textColor="@color/textLight" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9C99E6"
        android:progress="@android:integer/config_longAnimTime"
        android:progressBackgroundTint="@color/cardview_light_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_cards"
        android:textColor="@color/textLight" />

    <NumberPicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:solidColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_players"
        android:textColor="@color/textLight" />


    <NumberPicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineAmbientShadowColor="@color/white"
        android:solidColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite"
        android:textColor="@color/textLight" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:background="@color/iconLight"
        android:text="@string/invitelist" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/iconLight"
        android:text="@string/code"
        style="?android:attr/buttonBarButtonStyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/iconLight"
        android:text="@string/play_online"/>

</LinearLayout>