<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView_fragmentHome_createdGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentHome_category_createdGames"
        android:textSize="@dimen/page_title"
        android:textColor="@color/textDark"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_fragmentHome_createdGames"
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView_fragmentHome_favoriteGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentHome_category_favoriteGames"
        android:textSize="@dimen/page_title"
        android:textColor="@color/textDark"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_fragmentHome_favoriteGames"
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView_fragmentHome_top10Games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentHome_category_top10Games"
        android:textSize="@dimen/page_title"
        android:textColor="@color/textDark"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_fragmentHome_top10Games"
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>